--- a/ReClass/ReClassEx.rc
+++ b/ReClass/ReClassEx.rc
@@ -172,7 +172,6 @@ BEGIN
     BUTTON      ID_EDIT_CUT
     BUTTON      ID_EDIT_COPY
     BUTTON      ID_EDIT_PASTE
-    BUTTON      ID_APP_ABOUT
 END
 
 IDR_HOME_LARGE_24 TOOLBAR 32, 32
@@ -294,7 +293,6 @@ BEGIN
     BUTTON      ID_EDIT_CUT
     BUTTON      ID_EDIT_COPY
     BUTTON      ID_EDIT_PASTE
-    BUTTON      ID_APP_ABOUT
 END
 
 
@@ -337,10 +335,6 @@ BEGIN
             END
         END
     END
-    POPUP "&Help"
-    BEGIN
-        MENUITEM "&About ReClassEx...\tShift+A", ID_APP_ABOUT
-    END
 END
 
 IDR_ReClassExTYPE MENU
@@ -382,10 +376,6 @@ BEGIN
                 MENUITEM "&Aqua Style",                 ID_VIEW_APPLOOK_OFF_2007_AQUA
             END
         END
-    END
-    POPUP "&Help"
-    BEGIN
-        MENUITEM "&About ReClassEx...\tShift+A", ID_APP_ABOUT
     END
 END
 
@@ -544,7 +534,6 @@ END
 
 IDR_ReClassExTYPE ACCELERATORS
 BEGIN
-    "A",            ID_APP_ABOUT,           VIRTKEY, CONTROL, ALT, NOINVERT
     "N",            ID_FILE_NEW,            VIRTKEY, CONTROL, NOINVERT
     "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL, NOINVERT
     "S",            ID_FILE_SAVE,           VIRTKEY, CONTROL, NOINVERT
@@ -570,21 +559,6 @@ END
 //
 // Dialog
 //
-
-IDD_ABOUTBOX DIALOGEX 0, 0, 273, 204
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "About"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
-BEGIN
-    LTEXT           "ReClassEx",IDC_STATIC,13,54,117,8
-    CTEXT           "This is a complete port of ReClass to x64, which contains new features. ReClass was originally written by DrUnKeN ChEeTaH, then later developed by P47R!CK and DogMatt.",IDC_STATIC,9,86,256,27
-    LTEXT           "Version: x.x.x.x",IDC_ABOUT_BUILD_VERSION,13,63,127,8
-    LTEXT           "Build Date: xx:xx:xxxx",IDC_ABOUT_BUILD_DATE,13,73,125,8
-    CTEXT           "Thanks to all the authors who contributed to ReClass:",IDC_STATIC,9,112,256,8
-    CTEXT           "Authors here",IDC_ABOUT_AUTHORS,9,123,256,25
-    CONTROL         IDB_BITMAP_ABOUT,IDC_STATIC_IMAGE_ABOUT,"Static",SS_BITMAP | SS_REALSIZEIMAGE,9,0,256,44
-    EDITTEXT        IDC_ABOUT_LICENSE,9,153,256,43,ES_MULTILINE | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
-END
 
 IDD_DIALOG_TYPES DIALOGEX 0, 0, 137, 294
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
@@ -707,8 +681,6 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,0
- PRODUCTVERSION 1,2,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -723,14 +695,10 @@ BEGIN
     BEGIN
         BLOCK "040004b0"
         BEGIN
-            VALUE "FileVersion", "1.2.0.0"
-            VALUE "LegalCopyright", "Copyright (C) 2018"
-            VALUE "ProductVersion", "1.2.0.0"
         END
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x400, 1200
     END
 END
 
@@ -952,7 +920,6 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_APP_ABOUT            "Display program information, version number and copyright\nAbout"
     ID_APP_EXIT             "Quit the application; prompts to save documents\nExit"
 END
 
@@ -1038,7 +1005,7 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_RECLASS_PLUGINS      "Opens ReClass Plugins dialog"
+    ID_RC_PLUGINS      "Opens RC Plugins dialog"
     ID_FILE_OPEN_PDB        "Opens PDB for symbol searching"
 END
 
